# o4fix

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  README.md  mp4patch.py  o4fix.py
.github/actions/setup-opencv/: action.yml
.github/workflows/: ci.yml  release.yml
analysis/: diff_renders.py  eval_render.py  gcsv_vs_raw.py  make_cache.py  rank_renders.py
docs/: development.md  release-checklist.md
docs/superpowers/plans/: 2026-07-14-rust-core-port.md  2026-07-18-tauri-gui-packaging-ci.md
docs/superpowers/specs/: 2026-07-12-o4-gyro-fix-design.md  2026-07-14-rust-refactor-design.md  (+1 more)
o4core/: Cargo.toml
o4core/src/: config.rs  optical.rs  patch.rs
o4core/tests/: dsp_kernels.rs  e2e.rs  golden_patch.rs
o4core/tests/common/: mod.rs
o4core/tests/fixtures/: filters.json
o4fix-app/: Cargo.toml  tauri.conf.json
o4fix-app/capabilities/: default.json
o4fix-app/src/: settings.rs
o4fix-app/ui/: help.js  index.html
o4fix-cli/: Cargo.toml
o4fix-cli/src/: args.rs  main.rs
packaging/: README.txt
python/: o4fix.py  prep_inject.py
python/analysis/: gcsv_vs_raw.py  rank_renders.py  residual_metrics.py  validate_gcsv.py
python/tools/: dump_goldens.py  dump_quats_py.py  gen_fixtures.py  make_icon.py
rust/: Cargo.toml  README.md
rust/o4core/: Cargo.toml
rust/o4fix-app/: Cargo.toml
rust/o4fix-app/src/: main.rs  queue.rs  settings.rs
rust/o4fix-app/ui/: app.js  help.js  index.html  style.css
rust/o4fix-cli/: Cargo.toml
sample_vids/: eval_RUST.gyroflow
tools/: dump_goldens.py  dump_quats_py.py  gen_fixtures.py  make_icon.py
(+29 files in other folders)
